Fix: change on mobile design

--- a/src/App.css
+++ b/src/App.css
@@ -148,6 +148,8 @@ button {
 @media screen and (max-width: 340px) {
   .container {
     margin-inline: 1rem;
+    /*margin-left: var(--mb-2);
+    margin-right: var(--mb-2);*/
   }
 }
 
