--- a/src/components/ArticleProjects/index.css
+++ b/src/components/ArticleProjects/index.css
@@ -5,74 +5,82 @@
     padding: 1rem;
 }*/
 
-.projects__card{
-    padding: 1rem 1rem 2rem;
-    transition: background-color .4s;
-    color: var(--black-color-light);
+.projects__card {
+  padding: 1rem 1rem 2rem;
+  transition: background-color 0.4s;
+  color: var(--black-color-light);
 }
 
-.projects__image{
-    position: relative;
-    margin-bottom: .75rem;
+.projects__image {
+  position: relative;
+  margin-bottom: 0.75rem;
 }
 
-.projects__content{
-    margin-bottom: 1.25rem;
+.projects__content {
+  margin-bottom: 1.25rem;
 }
 
-.projects__subtitle{
-    position: relative;
-    display: inline-block;
-    font-size: var(--small-font-size);
-    font-weight: var(--font-medium);
-    color: var(--black-color);
-    margin-bottom: .75rem;
-    padding-left: 1.75rem;
+.projects__subtitle {
+  position: relative;
+  display: inline-block;
+  font-size: var(--small-font-size);
+  font-weight: var(--font-medium);
+  color: var(--black-color);
+  margin-bottom: 0.75rem;
+  padding-left: 1.75rem;
 }
 
-.projects__subtitle::after{
-    content: '';
-    width: 20px;
-    height: 1px;
-    background-color: var(--black-color);
-    position: absolute;
-    top: 50%;
-    left: 0;
+.projects__subtitle::after {
+  content: "";
+  width: 20px;
+  height: 1px;
+  background-color: var(--black-color);
+  position: absolute;
+  top: 50%;
+  left: 0;
 }
 
-.projects__title{
-    font-size: var(--h3-font-size);
-    margin-bottom: .75rem;
+.projects__title {
+  font-size: var(--h3-font-size);
+  margin-bottom: 0.75rem;
 }
 
-.projects__buttons{
-    display: flex;
-    align-items: center;
-    column-gap: 1rem;
+.projects__buttons {
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
 }
 
-.projects__link{
-    display: flex;
-    align-items: center;
-    column-gap: .25rem;
-    color: var(--black-color);
-    font-size: var(--small-font-size);
-    font-weight: var(--font-medium);
-    transition: color .4s;
+.projects__link {
+  display: flex;
+  align-items: center;
+  column-gap: 0.25rem;
+  color: var(--black-color);
+  font-size: var(--small-font-size);
+  font-weight: var(--font-medium);
+  transition: color 0.4s;
 }
 
-.projects__link i{
-    font-size: 1rem;
-    color: var(--black-color);
-    transition: color .4s;
+.projects__link i {
+  font-size: 1rem;
+  color: var(--black-color);
+  transition: color 0.4s;
 }
 
 .projects__link:hover,
-.projects__link:hover i{
-    color: var(--second-color);
+.projects__link:hover i {
+  color: var(--second-color);
 }
 
-.projects__card:hover{
-    background-color: var(--fourth-color);
-    color: var(--second-color);
+.projects__card:hover {
+  background-color: var(--fourth-color);
+  color: var(--second-color);
+}
+
+@media screen and (min-width: 576px) {
+  .projects__buttons {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
 }
