--- a/src/pages/Projects/index.css
+++ b/src/pages/Projects/index.css
@@ -9,7 +9,7 @@
 
 @media screen and (min-width: 576px) {
   .projects__container {
-    grid-template-columns: 450px;
+    grid-template-columns: repeat(2, 320px);
     justify-content: center;
   }
 
